--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ license = "MIT"
 
 [dependencies]
 serde_json = "1.0"
-serde = "1.0"
+serde = { version = "1.0" , features = ["derive"] }
+ureq = { version = "*", features = ["json"] }
