--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,13 @@ jobs:
       run: cargo fmt
     - name: Build
       run: cargo build --verbose
+  
+  test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
     - name: Run tests
       run: cargo test --verbose
    
