--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ categories = ["API"]
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0" , features = ["derive"] }
-ureq = { version = "*", features = ["json"] }
+ureq = { version = "2.0", features = ["json"] }
