--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "MIT"
 repository = "https://github.com/l-const/rs-covid19gr"
 description = "Rust bindings to the Covid19gr API"
-categories = ["API"]
+categories = ["api-bindings"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
